# substrate-pallets

./: Cargo.toml  README.md
pallet-collectables/: Cargo.toml  README.md
pallet-collectables/src/: lib.rs
pallet-event/: Cargo.toml
pallet-event/src/: lib.rs
pallet-hello-world/: Cargo.toml
pallet-hello-world/src/: lib.rs
pallet-template/: Cargo.toml
pallet-template/src/: lib.rs
